fixed a height issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -389,6 +389,12 @@ img::-moz-selection {
 
 
 // portfolio section
+#workSection {
+  padding-top: 100px;
+  @media(max-width:767px) {
+    padding-top: 10px;
+  }
+}
 .project-title {
   h3 {
       margin-bottom: 15px;
