--- a/css/main.scss
+++ b/css/main.scss
@@ -60,7 +60,6 @@ a:focus {
 .light {
     font-weight: 400;
 }
-
 .navbar-custom {
     margin-bottom: 0;
     border-bottom: 1px solid rgba(255,255,255,.3);
@@ -440,3 +439,8 @@ img::-moz-selection {
 .project-links {
   margin-top: 15px;
 }
+
+
+// .affex-top {
+//   background: red !important;
+// }
