--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,6 +19,9 @@
                       <a href="{{ site.baseurl }}/work" class="fa fa-briefcase" aria-hidden="true"> Work</a>
                     </li>
                     <li>
+                      <a href="{{ site.hireurl }}" class="fa fa-money" aria-hidden="true" target="_blank"> Hire</a>
+                    </li>
+                    <li>
                       <a href="{{ site.baseurl }}/blog" class="fa fa-pencil-square-o" aria-hidden="true"> Blog</a>
                     </li>
                 </ul>
