--- a/css/main.scss
+++ b/css/main.scss
@@ -444,3 +444,19 @@ img::-moz-selection {
 // .affex-top {
 //   background: red !important;
 // }
+
+
+//Add the below transitions to allow a smooth color change similar to lyft
+.navbar {
+    -webkit-transition: all 0.6s ease-out;
+    -moz-transition: all 0.6s ease-out;
+    -o-transition: all 0.6s ease-out;
+    -ms-transition: all 0.6s ease-out;
+    transition: all 0.6s ease-out;
+}
+
+.navbar.scrolled {
+    padding:  0;
+    background: rgb(68, 68, 68); //IE
+    background: rgba(0, 0, 0, 0.78); //NON-IE
+}
