--- a/css/main.scss
+++ b/css/main.scss
@@ -90,6 +90,8 @@ a:focus {
     color: white;
     font-weight: bold;
     text-align: center;
+    // border-bottom: none;
+    // padding-bottom: 0;
 }
 
 .navbar-custom .nav li.active {
@@ -339,6 +341,22 @@ img::-moz-selection {
   margin-left: 2vw;
   margin-right: 2vw;
   text-align: left;
+  font-size: 16px;
+  line-height: 1.5;
+  li {
+    font-size: 18px;
+    line-height: 2;
+  }
+
+  a {
+    // underline the links
+    border-bottom: 1px solid;
+    padding-bottom: 3px;
+  }
+
+  h1, h2, h3  {
+    margin-top: 70px;
+  }
 
   .post-date {
     margin: 0 0 5px;
