--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,6 +18,9 @@
                     <li>
                       <a href="{{ site.baseurl }}/work" class="fa fa-briefcase" aria-hidden="true"> Work</a>
                     </li>
+                    <li>
+                      <a href="{{ site.baseurl }}/resources/pdfs/amr-elsekilly-resume.pdf" target="_blank" class="fa fa-file-text" aria-hidden="true"> Resume</a>
+                    </li>
                     <!-- <li>
                       <a href="{{ site.hireurl }}" class="fa fa-money" aria-hidden="true" target="_blank"> Hire</a>
                     </li> -->
