Update Résumé word

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,7 +19,7 @@
                       <a href="{{ site.baseurl }}/work" class="fa fa-briefcase" aria-hidden="true"> Work</a>
                     </li>
                     <li>
-                      <a href="{{ site.baseurl }}/resources/pdfs/amr-elsekilly-resume.pdf" target="_blank" class="fa fa-file-text" aria-hidden="true"> Resume</a>
+                      <a href="{{ site.baseurl }}/resources/pdfs/amr-elsekilly-resume.pdf" target="_blank" class="fa fa-file-text" aria-hidden="true"> Résumé</a>
                     </li>
                     <!-- <li>
                       <a href="{{ site.hireurl }}" class="fa fa-money" aria-hidden="true" target="_blank"> Hire</a>
