--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
       <!-- <i class="fa fa-code" id="header-badge" aria-hidden="true"></i> -->
       <span id="header-badge">&lt;<span class="skills"></span>&gt;</span>
         <h2 class="job-title">
-          Front-end Web Developer at <a href="http://webee.com.mt/">Webee</a>
+          Freelance Full-Stack Web Developer
         </h2>
         <ul class="list-inline banner-social-buttons">
             {% for network in site.social %}
