modified some styles for the colors

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,10 @@
     <!-- add my favicon -->
     <link rel="shortcut icon" href="{{ site.url }}/img/favicon.ico" type="image/x-icon" />
 
+    <!-- add the font for the brand name -->
+  <link href="https://fonts.googleapis.com/css?family=Sofia" rel="stylesheet">
+
+    
     <script type="text/javascript">
       var host = "amrsekilly.com";
       if ((host == window.location.host) && (window.location.protocol != 'https:')) {
