--- a/css/main.scss
+++ b/css/main.scss
@@ -72,6 +72,7 @@ a:focus {
     cursive;
     font-size: 2.2em;
     color: white;
+    text-transform: none;
 }
 
 .navbar-custom .navbar-brand:focus {
