--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -1,8 +1,4 @@
-///
-/// Dimension by HTML5 UP
-/// html5up.net | @ajlkn
-/// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-///
+
 
 /* Header */
 
@@ -54,6 +50,7 @@
 			line-height: 5.5rem;
 			border: dashed _size(border-width) _palette(border);
 			border-radius: 100%;
+			// border-color: alpha($color: white);
 			font-size: 4rem;
 			margin-right: calc(4%);
 
