--- a/src/assets/scss/components/_image.scss
+++ b/src/assets/scss/components/_image.scss
@@ -64,7 +64,10 @@
 			width: 100%;
 
 			img {
-				width: 100%;
+				display: block;
+				margin-left: auto;
+				margin-right: auto;
+				width: 70%;
 			}
 		}
 
