--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -42,3 +42,54 @@
 	@import 'layout/header';
 	@import 'layout/main';
 	@import 'layout/footer';
+
+
+	/* Ripple Out */
+
+	@-webkit-keyframes hvr-ripple-out {
+		100% {
+			top: -12px;
+			right: -12px;
+			bottom: -12px;
+			left: -12px;
+			opacity: 0;
+		}
+	}
+
+	@keyframes hvr-ripple-out {
+		100% {
+			top: -12px;
+			right: -12px;
+			bottom: -12px;
+			left: -12px;
+			opacity: 0;
+		}
+	}
+
+	.hvr-ripple-out {
+		display: inline-block;
+		vertical-align: middle;
+		-webkit-transform: perspective(1px) translateZ(0);
+		transform: perspective(1px) translateZ(0);
+		box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+		position: relative;
+	}
+
+	.hvr-ripple-out:before {
+		content: '';
+		position: absolute;
+		border: #e1e1e1 solid 1px;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		-webkit-animation-duration: 0.8s;
+		animation-duration: 0.8s;
+	}
+
+	.hvr-ripple-out:hover:before,
+	.hvr-ripple-out:focus:before,
+	.hvr-ripple-out:active:before {
+		-webkit-animation-name: hvr-ripple-out;
+		animation-name: hvr-ripple-out;
+	}
